--- a/mindx-dl/deploy/offline/cluster/offline_load_images.yaml
+++ b/mindx-dl/deploy/offline/cluster/offline_load_images.yaml
@@ -44,25 +44,20 @@
           docker load < calico-kube-controllers_amd64.tar.gz
       when: ansible_architecture == "x86_64"
 
-    - name: Load mindx images - arm64
+    - name: Load Volcano images
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < vc-controller-manager_arm64.tar.gz;
-          docker load < vc-scheduler_arm64.tar.gz;
-          docker load < vc-webhook-manager_arm64.tar.gz;
-          docker load < hccl-controller_arm64.tar.gz
-      when: ansible_architecture == "aarch64"
+          docker load -i vc-webhook-manager-base*;
+          docker load -i vc-controller-manager*;
+          docker load -i vc-scheduler*;
+          docker load -i vc-webhook-manager-v*;
 
-    - name: Load mindx images - x86_64
+    - name: Load hccl-controller images
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < vc-controller-manager_amd64.tar.gz;
-          docker load < vc-scheduler_amd64.tar.gz;
-          docker load < vc-webhook-manager_amd64.tar.gz;
-          docker load < hccl-controller_amd64.tar.gz
-      when: ansible_architecture == "x86_64"
+          docker load -i hccl-controller*
 
 # Load docker images on worker
 - hosts: workers
@@ -82,8 +77,8 @@
         - calico-pod2daemon-flexvol_arm64.tar.gz
         - calico-cni_arm64.tar.gz
         - calico-kube-controllers_arm64.tar.gz
-        - Ascend-K8sDevicePlugin-V20.1.0-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta_arm64.tar.gz
+        - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
+        - huawei-cadvisor-beta-{{hccl_version}}-arm64.tar.gz
       when: ansible_architecture == "aarch64"
 
     - name: scp docker images from master to workers - x86_64
@@ -97,8 +92,8 @@
         - calico-pod2daemon-flexvol_amd64.tar.gz
         - calico-cni_amd64.tar.gz
         - calico-kube-controllers_amd64.tar.gz
-        - Ascend-K8sDevicePlugin-V20.1.0-x86-Docker.tar.gz
-        - huawei-cadvisor-beta_amd64.tar.gz
+        - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-x86-Docker.tar.gz
+        - huawei-cadvisor-beta-{{hccl_version}}-amd64.tar.gz
       when: ansible_architecture == "x86_64"
 
     - name: Load images - arm64
@@ -111,8 +106,8 @@
           docker load < calico-pod2daemon-flexvol_arm64.tar.gz;
           docker load < calico-cni_arm64.tar.gz;
           docker load < calico-kube-controllers_arm64.tar.gz;
-          docker load < Ascend-K8sDevicePlugin-V20.1.0-arm64-Docker.tar.gz;
-          docker load < huawei-cadvisor-beta_arm64.tar.gz
+          docker load -i Ascend-K8sDevicePlugin*Docker*;
+          docker load -i huawei-cadvisor-beta*;
       when: ansible_architecture == "aarch64"
 
     - name: Load images - x86_64
@@ -125,6 +120,6 @@
           docker load < calico-pod2daemon-flexvol_amd64.tar.gz;
           docker load < calico-cni_amd64.tar.gz;
           docker load < calico-kube-controllers_amd64.tar.gz;
-          docker load < Ascend-K8sDevicePlugin-V20.1.0-x86-Docker.tar.gz;
-          docker load < huawei-cadvisor-beta_amd64.tar.gz
+          docker load -i Ascend-K8sDevicePlugin*Docker*;
+          docker load -i huawei-cadvisor-beta*;
       when: ansible_architecture == "x86_64"
