--- a/mindx-dl/deploy/online/cluster/online_deploy_service.yaml
+++ b/mindx-dl/deploy/online/cluster/online_deploy_service.yaml
@@ -135,14 +135,14 @@
     - name: Deploy hccl-controller
       shell:
         chdir: "{{deploy_yaml_dir}}"
-        cmd: kubectl apply -f hccl-controller.yaml
+        cmd: kubectl apply -f hccl-controller*.yaml
 
     - name: Deploy device plugin
       shell:
         chdir: "{{deploy_yaml_dir}}"
         cmd:
-          kubectl apply -f ascendplugin-volcano.yaml;
-          kubectl apply -f ascendplugin-310.yaml
+          kubectl apply -f ascendplugin-volcano*.yaml;
+          kubectl apply -f ascendplugin-310*.yaml
 
     - name: Deploy cadvisor
       shell:
