--- a/mindx-dl/deploy/online/cluster/online_load_images.yaml
+++ b/mindx-dl/deploy/online/cluster/online_load_images.yaml
@@ -287,7 +287,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-arm64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-arm64.tar.gz
       when:
         - ansible_architecture == "aarch64"
         - ansible_default_ipv4['address'] != master_ip
@@ -300,7 +300,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-amd64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-amd64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-amd64.tar.gz
       when:
         - ansible_architecture == "x86_64"
         - ansible_default_ipv4['address'] != master_ip
@@ -314,7 +314,7 @@
           docker load < {{item}}
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_pkg_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-arm64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-arm64.tar.gz
       when: ansible_architecture == "aarch64"
       tags:
         - no_ascend-hub
@@ -326,7 +326,7 @@
           docker load < {{item}}
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_pkg_version}}-amd64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-amd64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-amd64.tar.gz
       when: ansible_architecture == "x86_64"
       tags:
         - no_ascend-hub
