--- a/mindx-dl/deploy/online/online_join_cluster.yaml
+++ b/mindx-dl/deploy/online/online_join_cluster.yaml
@@ -534,7 +534,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-arm64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-arm64.tar.gz
       when:
         - ansible_architecture == "aarch64"
         - ansible_default_ipv4['address'] != master_ip
@@ -547,7 +547,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-amd64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-amd64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-amd64.tar.gz
       when:
         - ansible_architecture == "x86_64"
         - ansible_default_ipv4['address'] != master_ip
@@ -561,7 +561,7 @@
           docker load < {{item}}
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-arm64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-arm64.tar.gz
       when: ansible_architecture == "aarch64"
       tags:
         - no_ascend-hub
@@ -573,7 +573,7 @@
           docker load < {{item}}
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-amd64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-amd64.tar.gz
+        - huawei-cadvisor-beta-{{cadvisor_version}}-amd64.tar.gz
       when: ansible_architecture == "x86_64"
       tags:
         - no_ascend-hub
