--- a/mindx-dl/deploy/online/cluster/clean_services.yaml
+++ b/mindx-dl/deploy/online/cluster/clean_services.yaml
@@ -28,8 +28,7 @@
     shell:
       chdir: "{{deploy_yaml_dir}}"
       cmd:
-        kubectl delete -f rbac.yaml;
-        kubectl delete -f hccl-controller.yaml
+        kubectl delete -f hccl-controller*.yaml
     tags: hccl-controller
     ignore_errors: yes
 
@@ -37,8 +36,8 @@
     shell:
       chdir: "{{deploy_yaml_dir}}"
       cmd:
-        kubectl delete -f ascendplugin-310.yaml;
-        kubectl delete -f ascendplugin-volcano.yaml
+        kubectl delete -f ascendplugin-310*.yaml;
+        kubectl delete -f ascendplugin-volcano*.yaml
     tags: device-plugin
     ignore_errors: yes
 
