--- a/mindx-dl/deploy/online/single/deploy.yaml
+++ b/mindx-dl/deploy/online/single/deploy.yaml
@@ -95,28 +95,20 @@
       shell:
         chdir: "{{yaml_dir}}"
         cmd:
-          kubectl apply -f hccl-controller.yaml
+          kubectl apply -f hccl-controller*.yaml
 
     - name: Deploy device plugin
       shell:
         chdir: "{{yaml_dir}}"
         cmd:
-          kubectl apply -f ascendplugin-volcano.yaml;
-          kubectl apply -f ascendplugin-310.yaml
+          kubectl apply -f ascendplugin-volcano*.yaml;
+          kubectl apply -f ascendplugin-310*.yaml
 
     - name: Deploy cadvisor
       shell:
         chdir: "{{yaml_dir}}/kubernetes/overlays"
         cmd:
           kubectl apply -k huawei
-
-    - name: Create volcano environment
-      shell:
-        chdir: "{{yaml_dir}}"
-        cmd:
-          kubectl create namespace volcano-system;
-          tr -d '\r' < gen-admission-secret.sh > gen-admission-secret-exec.sh;
-          bash -x gen-admission-secret-exec.sh --service volcano-admission-service --namespace volcano-system --secret volcano-admission-secret
 
     - name: Deploy volcano
       shell:
