Match-id-3ff583f5fbc9e9e6372e5733d6c3cd852d826463

--- a/mindx-dl/deploy/online/cluster/online_load_images.yaml
+++ b/mindx-dl/deploy/online/cluster/online_load_images.yaml
@@ -80,10 +80,10 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i vc-webhook-manager-base*-arm64.tar.gz;
-          docker load -i vc-controller-manager*-arm64.tar.gz;
-          docker load -i vc-scheduler*-arm64.tar.gz;
-          docker load -i vc-webhook-manager-v*-arm64.tar.gz
+          docker load -i vc-webhook-manager-base*arm64.tar.gz;
+          docker load -i vc-controller-manager*arm64.tar.gz;
+          docker load -i vc-scheduler*arm64.tar.gz;
+          docker load -i vc-webhook-manager-v*arm64.tar.gz
       when: ansible_architecture == "aarch64"
       tags:
         - no_ascend-hub
@@ -92,10 +92,10 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i vc-webhook-manager-base*-amd64.tar.gz;
-          docker load -i vc-controller-manager*-amd64.tar.gz;
-          docker load -i vc-scheduler*-amd64.tar.gz;
-          docker load -i vc-webhook-manager-v*-amd64.tar.gz
+          docker load -i vc-webhook-manager-base*amd64.tar.gz;
+          docker load -i vc-controller-manager*amd64.tar.gz;
+          docker load -i vc-scheduler*amd64.tar.gz;
+          docker load -i vc-webhook-manager-v*amd64.tar.gz
       when: ansible_architecture == "x86_64"
       tags:
         - no_ascend-hub
@@ -104,7 +104,7 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i hccl-controller*-arm64.tar.gz
+          docker load -i hccl-controller*arm64.tar.gz
       when: ansible_architecture == "aarch64"
         tags:
           - no_ascend-hub
@@ -113,7 +113,7 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i hccl-controller*-amd64.tar.gz
+          docker load -i hccl-controller*amd64.tar.gz
       when: ansible_architecture == "x86_64"
         tags:
           - no_ascend-hub
@@ -287,7 +287,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{cadvisor_version}}-arm64.tar.gz
+        - huawei-cadvisor-{{cadvisor_version}}-arm64.tar.gz
       when:
         - ansible_architecture == "aarch64"
         - ansible_default_ipv4['address'] != master_ip
@@ -300,7 +300,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-amd64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{cadvisor_version}}-amd64.tar.gz
+        - huawei-cadvisor-{{cadvisor_version}}-amd64.tar.gz
       when:
         - ansible_architecture == "x86_64"
         - ansible_default_ipv4['address'] != master_ip
@@ -314,7 +314,7 @@
           docker load < {{item}}
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{cadvisor_version}}-arm64.tar.gz
+        - huawei-cadvisor-{{cadvisor_version}}-arm64.tar.gz
       when: ansible_architecture == "aarch64"
       tags:
         - no_ascend-hub
@@ -326,7 +326,7 @@
           docker load < {{item}}
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-amd64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{cadvisor_version}}-amd64.tar.gz
+        - huawei-cadvisor-{{cadvisor_version}}-amd64.tar.gz
       when: ansible_architecture == "x86_64"
       tags:
         - no_ascend-hub
