Match-id-d252c6803b0989d7babf210108e34a1cc70b1e43

--- a/mindx-dl/deploy/offline/cluster/offline_load_images.yaml
+++ b/mindx-dl/deploy/offline/cluster/offline_load_images.yaml
@@ -76,7 +76,7 @@
         chdir: "{{docker_images_dir}}"
         cmd:
           docker load -i hccl-controller*amd64.tar.gz
-      when: ansible_architecture == "aarch64"
+      when: ansible_architecture == "x86_64"
 
 # Load docker images on worker
 - hosts: workers
