--- a/mindx-dl/deploy/online/cluster/set_global_env.yaml
+++ b/mindx-dl/deploy/online/cluster/set_global_env.yaml
@@ -105,7 +105,7 @@
         replace: '\1\2,{{ master_ip }}'
       when:
         - has_no_proxy_var.stdout != ""
-        - master_ip not in has_no_proxy_var.stdout
+        - ansible_default_ipv4['address'] not in has_no_proxy_var.stdout
       tags: init-master
 
     # create no_proxy when no_proxy exists
