Match-id-cf639a0386285c67f0a957de1519b03631ecaa50

--- a/mindx-dl/deploy/yamls/ascendplugin-310-v20.2.0.yaml
+++ b/mindx-dl/deploy/yamls/ascendplugin-310-v20.2.0.yaml
@@ -1,20 +1,7 @@
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: pods-device-plugin
-subjects:
-  - kind: ServiceAccount
-    name: default
-    namespace: kube-system
-roleRef:
-  kind: ClusterRole
-  name: cluster-admin
-  apiGroup: rbac.authorization.k8s.io
----
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: ascend-device-plugin-daemonset
+  name: ascend-device-plugin2-daemonset
   namespace: kube-system
 spec:
   selector:
@@ -32,7 +19,7 @@ spec:
       tolerations:
         - key: CriticalAddonsOnly
           operator: Exists
-        - key: huawei.com/Ascend910
+        - key: huawei.com/Ascend310
           operator: Exists
           effect: NoSchedule
         - key: "ascendplugin"
@@ -41,9 +28,9 @@ spec:
           effect: NoSchedule
       priorityClassName: "system-node-critical"
       nodeSelector:
-        accelerator: huawei-Ascend910
+        accelerator: huawei-Ascend310
       containers:
-      - image: ascend-k8sdeviceplugin:V20.1.0
+      - image: ascend-k8sdeviceplugin:v20.2.0
         name: device-plugin-01
         resources:
           requests:
@@ -53,7 +40,7 @@ spec:
             memory: 500Mi
             cpu: 500m
         command: [ "/bin/bash", "-c", "--"]
-        args: [ "umask 0027;./build/build_in_docker.sh;ascendplugin  --useAscendDocker=${USE_ASCEND_DOCKER} --volcanoType=true" ]
+        args: [ "umask 0027;ascendplugin  --useAscendDocker=${USE_ASCEND_DOCKER}" ]
         securityContext:
           privileged: true
         imagePullPolicy: Never
@@ -64,15 +51,8 @@ spec:
             mountPath: /usr/local/Ascend/driver
           - name: log-path
             mountPath: /var/log/devicePlugin
-          - name: timezone
-            mountPath: /etc/timezone
           - name: localtime
             mountPath: /etc/localtime
-        env:
-          - name: NODE_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: spec.nodeName
       volumes:
         - name: device-plugin
           hostPath:
@@ -83,9 +63,6 @@ spec:
         - name: log-path
           hostPath:
             path: /var/log/devicePlugin
-        - name: timezone
-          hostPath:
-            path: /etc/timezone
         - name: localtime
           hostPath:
             path: /etc/localtime
